[package]
name = "rusftx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
builder-pattern = "0.4.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
http = "0.2.8"
chrono = { version = "0.4.22", features = ["serde"] }
hmac-sha256 = "1.1.5"
hex = "0.4.3"
serde_urlencoded = "0.7.1"
dotenv = "0.15.0"