[package]
name = "simple-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusftx = { path = ".." }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
